Adding most of the API

--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "googleapis": "^146.0.0"
+    "googleapis": "^146.0.0",
+    "node-cache": "^5.1.2",
+    "node-cron": "^3.0.3"
   }
 }
